Fix logo: show static text first, wait 40s then fade to video

--- a/public/index.html
+++ b/public/index.html
@@ -559,7 +559,7 @@
   <header>
     <a href="/" class="logo">
       <span class="logo-text">🦞 ClawPress</span>
-      <video id="logoVideo" class="logo-video" autoplay muted loop playsinline>
+      <video id="logoVideo" class="logo-video" muted loop playsinline>
         <source src="clawpress-logo-animation-v2.mp4" type="video/mp4">
       </video>
     </a>
